src/main/java/com/example/tinybank/errors/AccountCreationException.java
package com.example.tinybank.errors;

public class AccountCreationException extends Exception{
    public AccountCreationException(String message){
        super(message);
    }
}
